# MessageStoreProject

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Docs/: DomainModel.drawio  ImplementationInformation.md  UseCasesEventStorming.drawio  Views.drawio
MessageStore/: MessageStore.cpp  MessageStore.h  main.cpp
src/: main.cpp
src/Controllers/: CreateUser.cpp  CreateUser.h  IRepository.h  ReceiveAllMessages.cpp  ReceiveAllMessages.h  SendMessage.cpp  SendMessage.h  UseCaseResult.h
src/Model/: User.h  UserPool.cpp
src/Models/: Message.cpp  Message.h  MessagePool.cpp  MessagePool.h  User.h  UserPool.cpp  UserPool.h
src/Views/: ConsoleView.cpp  ConsoleView.h  CreateUserView.cpp  CreateUserView.h  CreateUserViewCommand.cpp  CreateUserViewCommand.h  IMessageCommand.h  InvalidOptionCommand.h  QuitCommand.h  ReceiveMessagesView.cpp  ReceiveMessagesView.h  ReceiveMessagesViewCommand.cpp  ReceiveMessagesViewCommand.h  Repository.cpp  Repository.h  SendMessageView.cpp  SendMessageView.h  SendMessageViewCommand.cpp  SendMessageViewCommand.h
